Fix heading spacing. Fix bottom-right article and button spacing

--- a/css/style.css
+++ b/css/style.css
@@ -9,25 +9,30 @@ h1 {
 
 h2 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1.25em;
+  font-weight: bold;
+  margin-bottom: 5px;
 }
 
 p {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1em;
+  line-height: 1.5em;
 }
 
 header {
   background-color: rgb(90, 90, 90);
   display: flex;
-  flex-direction: row;
+  flex-direction: space-around;
   height: 80px;
   margin-bottom: 30px;
-  padding: 20px;
+  padding: 10px;
   padding-left: 5%;
 }
 
 header *{
   display: flex;
+  margin-left: 21%;
 }
 
 ul {
@@ -37,8 +42,9 @@ ul {
 
 li {
   padding: 20px;
-  margin-left: 5%;
-  margin-right: 10%;
+  margin-left: 2%;
+  margin-right: 5%;
+  color: lightgrey;
 }
 
 main {
@@ -52,7 +58,16 @@ main {
 }
 
 section:nth-child(2) * {
-  padding: 5px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+section:nth-child(2) img:nth-child(1) {
+  padding-right: 25px;
+}
+
+section:nth-child(2) img:nth-child(3) {
+  padding-left: 25px;
 }
 
 section:nth-child(3) {
@@ -69,4 +84,14 @@ footer {
   height: 80px;
   background-color: rgb(90, 90, 90);
   margin-top: 30px;
+}
+
+article {
+  margin-left: 25px;
+}
+
+button {
+  font-size: 1.1em;
+  margin-top: 40%;
+  width: 170px;
 }
